--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -82,4 +82,6 @@ a {
 @import url("discussion.css");
 @import url("notification.css");
 @import url("comment.css");
+@import url("profile.css");
+
 
