--- a/frontend/styles/Comment.module.css
+++ b/frontend/styles/Comment.module.css
@@ -1,99 +1,104 @@
-.middleBloc{
+.middleBloc {
   width: 40%;
   height: 100vh;
   overflow-y: scroll;
+  padding: 0px 10px;
   padding-bottom: 10rem;
   z-index: 1;
 }
+
 .middleBloc::-webkit-scrollbar {
-  width:  0px;    
+  width: 0px;
 }
 
 .contentAllComments {
-    width: 90%;
-    height: fit-content;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: space-between; */
-    margin: 10px;
-    margin-left: 5%;
-    /* margin-bottom: 10rem; */
-    border-top: 1px solid gray;
+  width: 100%;
+  height: fit-content;
+  margin-top: 10px;
+  padding: 10px;
+  border-top: 1px solid gray;
 }
 
-.plusAndMessage{
-    display: flex;
-    align-items: center;
+.plusAndMessage {
+  display: flex;
+  align-items: center;
 }
+
 .containerCommentsMessage img {
-    width: 40px;
-    height: 40px;
-    margin: 0px 10px;
-    border: 1px solid white;
-    border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  margin: 0px 10px;
+  border: 1px solid white;
+  border-radius: 100%;
 }
 
 .containerCommentsMessage {
-    width: 100%;
-    min-height: 0px ;
-    max-height: 400px;
-    overflow-y: scroll;
-    padding: 20px;
-    padding-left: 0px;
+  width: 100%;
+  min-height: 0px;
+  max-height: 400px;
+  overflow-y: scroll;
+  padding: 20px;
+  padding-left: 0px;
 }
+
 .containerCommentsMessage::-webkit-scrollbar {
-    width:  2px;
+  width: 2px;
 }
+
 .contentMessage {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .contentMessage div {
-    display: flex;
+  display: flex;
 }
 
 .contentMessage div pre {
-    width: 80%;
-    padding: 10px;
-    border-radius: 10px;
-    text-wrap: wrap;
-    word-wrap: break-word;
-    background: var(--primary-bg);
+  width: 80%;
+  padding: 10px;
+  border-radius: 10px;
+  text-wrap: wrap;
+  word-wrap: break-word;
+  background: var(--primary-bg);
 
 }
 
 .contentMessage p {
-    margin-top: 5px;
-    margin-left: 60px;
-    font-size: small;
+  margin-top: 5px;
+  margin-left: 60px;
+  font-size: small;
 }
-.contentMessage p  span{
-    text-transform: capitalize;
-    color: gray;
-    padding-right: 10px;
+
+.contentMessage p span {
+  text-transform: capitalize;
+  color: gray;
+  padding-right: 10px;
 }
 
 /* comment form */
 
 .messageBox {
   width: 95%;
-  height:60px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   background-color: #2d2d2d;
   padding: 0 15px;
   margin-top: 10px;
-  margin-left:  10px;
+  margin-left: 10px;
   border-radius: 10px;
   border: 1px solid rgb(63, 63, 63);
 }
-.plusAndMessage{
-    width: 100%;
+
+.plusAndMessage {
+  width: 100%;
 }
+
 .messageBox:focus-within {
   border: 1px solid rgb(110, 110, 110);
 }
+
 .fileUploadWrapper {
   width: fit-content;
   height: 100%;
@@ -106,6 +111,7 @@
 #file {
   display: none;
 }
+
 .fileUploadWrapper label {
   cursor: pointer;
   width: fit-content;
@@ -115,26 +121,33 @@
   justify-content: center;
   position: relative;
 }
+
 .fileUploadWrapper label svg {
   height: 18px;
 }
+
 .fileUploadWrapper label svg path {
   transition: all 0.3s;
 }
+
 .fileUploadWrapper label svg circle {
   transition: all 0.3s;
 }
+
 .fileUploadWrapper label:hover svg path {
   stroke: #fff;
 }
+
 .fileUploadWrapper label:hover svg circle {
   stroke: #fff;
   fill: #3c3c3c;
 }
+
 .fileUploadWrapper label:hover .tooltip {
   display: block;
   opacity: 1;
 }
+
 .tooltip {
   position: absolute;
   top: -40px;
@@ -150,6 +163,7 @@
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.596);
   transition: all 0.3s;
 }
+
 #messageInput {
   width: 100%;
   height: 100%;
@@ -159,8 +173,9 @@
   padding-left: 10px;
   color: white;
 }
-#messageInput:focus ~ .sendButton svg path,
-#messageInput:valid ~ .sendButton svg path {
+
+#messageInput:focus~.sendButton svg path,
+#messageInput:valid~.sendButton svg path {
   fill: #3c3c3c;
   stroke: white;
 }
@@ -177,48 +192,54 @@
   cursor: pointer;
   transition: all 0.3s;
 }
+
 .sendButton svg {
   height: 18px;
   transition: all 0.3s;
 }
+
 .sendButton svg path {
   transition: all 0.3s;
 }
+
 .sendButton:hover svg path {
   fill: #3c3c3c;
   stroke: white;
 }
+
 @media screen and (max-width: 1024px) {
-  .middleBloc{
+  .middleBloc {
     width: 70%;
   }
 
 }
+
 @media screen and (max-width: 768px) {
-  .middleBloc{
+  .middleBloc {
     width: 100%;
     height: fit-content;
     overflow-y: scroll;
     padding-bottom: 1rem;
   }
-  
+
   .middleBloc::-webkit-scrollbar {
-    width:  0px;    
+    width: 0px;
   }
+
   .containerCommentsMessage {
     width: 100%;
-    min-height: 0px ;
+    min-height: 0px;
     max-height: 200px;
     overflow-y: scroll;
     padding: 20px;
     padding-left: 0px;
-}
+  }
 }
 
 @media screen and (min-width: 500px) and (max-width: 768px) {
-  .middleBloc{
+  .middleBloc {
     width: 100%;
-    margin:0px 10% ;
+    margin: 0px 10%;
     padding-bottom: 10px;
     align-items: center;
   }
