--- a/frontend/styles/CreatePost.module.css
+++ b/frontend/styles/CreatePost.module.css
@@ -42,10 +42,12 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  font-size: medium;
 }
 .blocPrivacyPost p {
   font-weight: initial;
   margin-bottom: 10px;
+  font-size: medium;
 }
 
 .blocPrivacyPost div {
@@ -56,9 +58,9 @@
   display: flex;
 }
 .blocPrivacyPost div div i {
-  font-size: 20px;
+  /* font-size: 20px; */
   margin-right: 10px;
-  padding: 15px;
+  padding: 10px;
   border-radius: 100%;
   background: var(--secondary-bg);
 }
