--- a/frontend/styles/profile.css
+++ b/frontend/styles/profile.css
@@ -1,496 +1,21 @@
-.photo-covert{
-    position: relative;
-    width: 100%;
-    height: 250px;
-
-    border-bottom: 1px solid white;
-}
-.photo-covert img:first-of-type{
-    width: 100%;
-    height: 100%;
-    filter: grayscale(80%);
-}
-.photo-covert div {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    position: relative;
-    top: -140px;
-    left: 20px;
-}
-.photo-covert div img:last-of-type{
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-    border: 1px solid white;
-}
-.photo-covert div p{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.photo-covert div p span{
-    font-size: 22px;
-    text-transform: capitalize;
-}
-.photo-covert div p a{
-    font-size: 18px;
-    text-transform: lowercase;
-    color: gray;
-    cursor: pointer;
-}
-.body-1{
-    position: relative;
-    top: 10px;
-}
-
-.menu{
-    width: 98%;
-    display: flex;
-    gap: 8px;
-    margin-top: 20px;
-}
-.menu a:first-of-type{
-     margin-left: 10px;
-     background: var(--second-blue);
-}
-.menu a{
-    display: flex;
-    align-items: center;
-    width: 50%;    
-    padding: 10px;
-    font-size: 18px;
-    border-radius: 10px;
-    background: var(--secondary-bg);
-}
-.menu a i{
-    font-size: 20px;
-    margin-right: 5px;
-}
-
-.body-menu{
-    width: 100%;
-    height: 400px;
-    margin-top: 30px;
-}
-
-@media screen and (min-width:768px) {
-    body{
-        overflow-y: scroll;
-    }
-    section{
-        display: flex;
-        flex-direction: column;
-        margin-top: -30px;
-    }
-    .photo-covert{
-        width: 100%;
-        height: fit-content;
-        padding: 0px 20%;
-        border-bottom: 0px;
-        background: var(--nav-bar-background-gradient);
-    }
-    .photo-covert img:first-of-type{
-        height: 400px;
-        margin-top: 0px;
-        border-radius: 0px 0px 10px 10px;
-    }
-
-    .menu{
-        width: 100%;
-        display: flex;
-        gap: 8px;
-        padding: 0px 20%;
-        margin-top: 20px;
-    }
-    .menu a{
-        width: fit-content;
-    }
-    .body-menu{
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-        padding-bottom: 10rem;
-    }
-    .post{
-        width: 40%;
-    }
-}
-@media screen and (min-width:768px) and (max-width:1024px) {
-    .menu{
-        width: 80%;
-        padding: 0px 10%;
-    }
-    .body-menu .post{
-        width: 80%;
-    }
-}
-@media screen and (max-width:768px){
-    .menu{
-        padding: 0px 10%;
-        flex-wrap: nowrap;
-    }
-    .body-menu {
-        padding: 0px 10%;
-    }
-}
-@media screen and (max-width:425px){
-    .menu{
-        width: 95%;
-        padding: 0px 2%;
-        flex-wrap: nowrap;
-    }
-    .body-menu {
-        width: 96%;
-        padding: 0px 2%;
-    }
-}
-
-.body-1{
- /* display: none; */
-}
-
-/* edit profile form */
-.edit-profile-bloc {
-    width: 700px;
-    height: 75vh;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -38%);
-    padding: 10px 20px;
-    border-radius: 10px;
-    overflow-y: auto;
-    background: var(--primary-bg);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  }
-  .edit-profile-bloc h1{
-    display: flex;
-    justify-content: space-between;
-  }
-  hr {
-    margin: 10px 0px;
-  }
-  .fa-arrow-left {
-    margin-right: 10px;
-  }
-  
- .picture-actual {
-    width: 100%;
-    text-align: center;
-  }
-  .picture-actual h3 {
-    text-transform: capitalize;
-    width: 100%;
-    font-weight: initial;
-    text-align: left;
-  }
-  .picture-actual img {
-    width: 200px;
-    height: 200px;
-    border: 1px solid white;
-    border-radius: 100%;
-  }
-  
-  .custum-file-upload {
-    height: 80px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: space-between;
-    gap: 2px;
-    cursor: pointer;
-    align-items: center;
-    justify-content: center;
-    border: 2px dashed #e8e8e8;
-    background-color: #212121;
-    padding: 1.5rem;
-    border-radius: 10px;
-    box-shadow: 0px 48px 35px -48px #e8e8e8;
-  }
-  
-  .custum-file-upload .icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .custum-file-upload .icon svg {
-    height: 40px;
-    fill: #e8e8e8;
-  }
-  
-  .custum-file-upload .text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .custum-file-upload .text span {
-    font-weight: 400;
-    color: #e8e8e8;
-  }
-  
-  .custum-file-upload input {
-    display: none;
-  }
-  
-  .form-group {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    margin: 15px 0px;
-    font-size: 16px;
-  }
-
-  .profile-type .conten-radio{
-    display: flex;
-    gap: 20px;
-    margin: 15px 0px;
-  }
-
-  .profile-type .conten-radio div{
-     display: flex;
-     align-items: center;
-     gap: 5px;
-     
-  }
-  .profile-type .conten-radio div i{
-    font-size: 20px;
-    padding: 10px;
-    border-radius: 100%;
-    background: var(--secondary-bg);
-  }
-  .profile-type .conten-radio div span{
-    font-size: 20px;
-  }
-  .profile-type .conten-radio div input{
-    height: fit-content;
-    width: fit-content;
-    padding: 0px;
-    margin: 0px;
-}
-
- 
-  .form-group span:first-of-type span:last-of-type {
-    color: #7f7f7f;
-    font-size: 18px;
-  }
-  .identiti {
-    padding-right: 5px;
-    font-weight: bold;
-    font-size: 18px;
-  }
-  .form-group .edit {
-    text-transform: capitalize;
-    color: var(--second-blue);
-    cursor: pointer;
-  }
-  
-  .input {
-    font-size: 0.9rem;
-   color: #000000;
-    width: 95%;
-    height: 40px;
-    margin-left: 10px;
-    margin-top: 10px;
-    box-sizing: border-box;
-    padding-inline: 0.5em;
-    padding-block: 0.7em;
-    border: none;
-    outline: none;
-    border-left: 5px solid var(--secondary-bg);
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  }
-  
-  .input-alt-textarea {
-    width: 95%;
-    height: 80px;
-    resize: none;
-  }
-  .group textarea::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
-    background: transparent;
-  }
-  .submit-update {
-    width: 100%;
-    margin-top: 40px;
-    text-align: center;
-  }
-  
-  button {
-    font-size: 1rem;
-    align-items: center;
-    height: 48px;
-    border-radius: 0.4rem;
-    font-weight: 600;
-    padding: 0 1.2rem;
-    color: #ddd;
-    border: none;
-    cursor: pointer;
-    text-transform: capitalize;
-    box-shadow: 0 0.5rem 1rem rgba(143, 142, 142, 0.15) !important;
-    background: #000000;
-  }
-  
-
-  @media screen and (max-width: 768px) {
-
-    .edit-profile-bloc {
-      width: 90%;
-    }
-  }
-  
-
-.profile-type .conten-radio  input[type="radio"] {
-    box-sizing: border-box;
-    width: 20px;
-    height: 20px;
-    margin: 6px;
-    padding: 0;
-    border: 2px solid var(--radio-border-color);
-    appearance: none;
-    background-color: transparent;
-    outline: none;
-    cursor: pointer;
-  }
-  
-  input[type="radio"]:not(:disabled):checked {
-    border-color: var(--second-blue);
-    background-color: var(--second-blue);
-    background-clip: content-box;
-    padding: 2px;
-  }
-
-  .edit-profile-bloc {
-    display: none;
-  }
-
-  /* bloc friend */
-
-.friend-fololowing-me{
+body{overflow-y: scroll;}
+.section-user-profile{
   width: 100%;
-  margin: 30px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  margin-top: 100px;
 }
-.menus{
-  width:80%;
-  display: flex;
-  justify-content: flex-end;
-  gap: 8px;
-  margin: 20px 0px;
-  margin-top: 0px;
-}
-.menus span:first-of-type{
-   background: var(--second-blue);
-}
-.menus span{
-  display: flex;
-  align-items: center;
-  width: fit-content;    
-  padding: 8px;
-  font-size: 18px;
+
+.post{
+  padding-bottom: 10px;
   border-radius: 10px;
   background: var(--secondary-bg);
-  cursor: pointer;
-}
-.menus span i{
-  font-size: 20px;
-  margin-right: 5px;
-}
-.content-list-friend{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 80%;
-    height: fit-content;
-    padding: 30px;
-    margin: 0px 20px;
-    border-radius: 20px;
-    background: var(--secondary-bg);
-}
-.content-list-friend .bloc{
-  width: 45%;
-  margin-bottom: 50px;
-  display: flex;
-  border-radius: 10px;
- 
-}
-.content-list-friend .bloc img{
-    width: 60px;
-    height: 60px;
-    margin-right: 10px;
-    border-radius: 10px;
-    border: 1px solid white;
-}
-.conte-unfollow{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items:start;
-}
-.content-list-friend .bloc h4{
-    margin-top: 10px;
-    text-transform: capitalize;
-    text-align: center;
-}
-.unfollow-btn{
-    background: var(--primary-bg);
-    padding: 5px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-.follow{
-    background: var(--second-blue);
-}
-.unfollow-btn i{
-     margin-right: 5px;
 }
 
-@media screen and (max-width:525px) {
-  .content-list-friend{
-    width: 85%;
-    margin: 0px;
-  }
-  .content-list-friend .bloc{
-    width: 100%;
-   
+.inputAlt{
+  color: red;
+}
+@media screen and (max-width:768px) {
+  .section-user-profile{
+    margin-top: 118px;
   }
 }
 
-
-
-.friend-i-fololow{
-  width: 100%;
-  margin: 30px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-.friend-i-fololow .menus span:first-of-type{
-  background: var(--secondary-bg);
-}
-.friend-i-fololow .menus span:last-of-type{
-
-  background: var(--second-blue);
-}
-
-
-.friend-fololowing-me,
-.friend-i-fololow{
-  display: none;
- }
