--- a/frontend/styles/modules/group.module.css
+++ b/frontend/styles/modules/group.module.css
@@ -42,6 +42,7 @@
     width: 80%;
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 6px 0px;
     border-radius: 10px;
     text-align: center;
@@ -52,6 +53,7 @@
 }
 
 .menuLeft .btnNewGroup i {
+    margin-right: 5px;
     font-size: 22px;
     color: var(--hsl-color-1);
 }
@@ -144,7 +146,7 @@
     margin-bottom: 10px;
 }
 
-.list-post-sugession {
+.listPostSugession {
     width: 100%;
     height: fit-content;
     display: flex;
@@ -156,20 +158,20 @@
 
 }
 
-.post-sugess {
+.postSugess {
     width: 250px;
     height: 300px;
     background: var(--secondary-bg);
     border-radius: 10px;
 }
 
-.post-sugess a img {
+.postSugess a img {
     width: 100%;
     height: 50%;
     border-radius: 10px 10px 0px 0px;
 }
 
-.post-sugess div {
+.postSugess div {
     width: 100%;
     height: 50%;
     padding: 20px;
@@ -179,12 +181,12 @@
 
 }
 
-.post-sugess div .name-group-membres {
+.postSugess div .name-group-membres {
     padding: 0px;
     margin: 0px;
 }
 
-.post-sugess div .name-group-membres a {
+.postSugess div .name-group-membres a {
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -195,13 +197,13 @@
     text-transform: capitalize;
 }
 
-.post-sugess div .name-group-membres span:last-of-type {
+.postSugess div .name-group-membres span:last-of-type {
     font-size: 12;
     font-weight: normal;
     color: gray;
 }
 
-.post-sugess div button {
+.postSugess div button {
     padding: 8px 0px;
     font-size: 18px;
     border-radius: 10px;
@@ -289,7 +291,7 @@
         height: fit-content;
     }
 
-    .menuLeft .bloc-nav {
+    .menuLeft .blocNav {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
@@ -297,7 +299,7 @@
         order: 3;
     }
 
-    .menuLeft .bloc-nav h4 {
+    .menuLeft .blocNav h4 {
         width: fit-content;
         font-size: small;
     }
@@ -340,7 +342,7 @@
         height: 0px;
     }
 
-    .menuLeft .bloc-nav h4 {
+    .menuLeft .blocNav h4 {
         background: var(--secondary-bg);
         padding-right: 10px;
         border-radius: 10px;
@@ -351,7 +353,7 @@
     }
 
 
-    .list-post-sugession {
+    .listPostSugession {
         width: 100%;
         height: fit-content;
         display: flex;
@@ -363,7 +365,7 @@
     
     }
 
-    .post-sugess {
+    .postSugess {
         width: 40%;
         height: fit-content;
         display: flex;
@@ -371,31 +373,31 @@
         gap: 10px;
         background: transparent;
     }
-    .post-sugess a img {
+    .postSugess a img {
         width: 80px;
         height: 80px;
         border-radius: 10px ;
     }
-    .post-sugess div {
+    .postSugess div {
         width: 100%;
         height: fit-content;
         padding: 0px;
     
     }
-    .post-sugess div .name-group-membres a {
+    .postSugess div .name-group-membres a {
         justify-content: start;
         height: fit-content;
         gap: 5px;
     }
 
 
-    .post-sugess div button {
+    .postSugess div button {
         display: none;
     }
 
 
 
-    .menuLeft .bloc-nav h4 span {
+    .menuLeft .blocNav h4 span {
         margin-right: 2px;
     }
 
@@ -405,7 +407,7 @@
     }
 }
 @media screen and (max-width: 450px) {
-    .post-sugess {
+    .postSugess {
         width: 80%;
     }
     .element-group {
