--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -10,6 +10,7 @@
   --secondary-bg: rgb(27, 30, 34);
   --primary-bg: #383838;
   --second-blue: #3155f1;
+  --third-blue: #3154f198;
   --teal60: #00D4A1;
   --green55: #00ED4F;
   --fds-blue-05: #ECF3FF;
