--- a/frontend/styles/profile-group.css
+++ b/frontend/styles/profile-group.css
@@ -1,686 +1,9 @@
-*{
-    font-weight: initial;
-}
-body {
-    overflow-y: scroll;
-}
-
-section {
-    margin-top: -30px;
+.section-group-profile {
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
 }
 
-.photo-covert {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: 0px;
-    padding: 0px 15%;
-    background: var(--nav-bar-background-gradient-wash);
-
-
-}
-
-.photo-covert img {
-    width: 100%;
-    height: 400px;
-    border-radius: 0px 0px 10px 10px;
-}
-
-.photo-covert .bloc-action-group-type {
-    width: 100%;
-    display: flex;
-    align-items: baseline;
-    margin-bottom: 20px;
-}
-
-.photo-covert .bloc-action-group-type .group-type i,
-.photo-covert .bloc-action-group-type .action button i {
-    margin-right: 5px;
-}
-
-.photo-covert .bloc-action-group-type .group-type {
-    width: 30%;
-    height: fit-content;
-    position: relative;
-    display: flex;
-    gap: 10px;
-}
-
-.photo-covert .bloc-action-group-type .action {
-    width: 70%;
-    height: fit-content;
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
-}
-
-.photo-covert .bloc-action-group-type .action button {
-    height: fit-content;
-    padding: 8px 10px;
-    font-size: 18px;
-    border-radius: 10px;
-    border: none;
-    background: gray;
-    cursor: pointer;
-}
-
-.photo-covert .bloc-action-group-type .action button:first-of-type {
-    background: var(--second-blue);
-}
-
-
-.content-post-about {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    gap: 20px;
-    padding: 20px 15%;
-
-}
-
-.content-post-about .bloc-left {
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-}
-
-.content-post-about .about-bloc {
-    width: 40%;
-    height: fit-content;
-    overflow: hidden;
-    margin-bottom: 20px;
+.section-group-profile  .post{
     padding: 10px;
-    border-radius: 10px;
-    background: var(--secondary-bg);
 }
-
-.content-post-about .about-bloc pre {
-    text-wrap: wrap;
-    word-wrap: break-word;
-}
-
-.content-post-about .bloc-left .nav-bloc-left {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-    border-bottom: 1px solid gray;
-
-}
-
-.content-post-about .bloc-left .nav-bloc-left button {
-    height: fit-content;
-    padding: 8px 20px;
-    font-size: 18px;
-    border-radius: 10px;
-    border: none;
-    background: var(--secondary-bg);
-    cursor: pointer;
-}
-
-.content-post-about .bloc-left .nav-bloc-left button i {
-    margin-right: 5px;
-}
-
-.content-post-about .bloc-left .conten-posts {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.conten-post {
-    height: fit-content;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    background: var(--secondary-bg);
-}
-
-.post {
-    margin-bottom: 0px;
-    border-top: none;
-}
-
-.content-post-about .bloc-left .conten-posts .conten-post .content-all-comments {
-    width: 100%;
-    margin-top: 0px;
-    margin-left: 0px;
-    margin-bottom: 20px;
-}
-
-
-@media screen and (max-width:1024px) {
-
-    .photo-covert,
-    .content-post-about {
-        width: 100%;
-        padding: 0px 5%;
-        margin-top: 20px;
-    }
-
-}
-
-@media screen and (max-width:768px) {
-    .photo-covert img {
-        width: 100%;
-        height: 250px;
-    }
-
-    .photo-covert .bloc-action-group-type {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-    }
-
-    .photo-covert .bloc-action-group-type .action,
-    .photo-covert .bloc-action-group-type .group-type {
-        width: 100%;
-    }
-    .photo-covert .bloc-action-group-type .group-type {
-
-        height: fit-content;
-        position: relative;
-        display: flex;
-        gap: 10px;
-    }
-    
-    .photo-covert .bloc-action-group-type .action {
-        height: fit-content;
-        display: flex;
-        justify-content: flex-end;
-        gap: 10px;
-    }
-
-    .photo-covert .bloc-action-group-type .action button {
-       
-        padding: 5px 8px;
-        font-size: small;
-        border-radius: 5px;
-    }
-    .content-post-about {
-        width: 100%;
-        flex-direction: column-reverse;
-        padding: 0px 5%;
-        margin-top: 20px;
-    }
-
-    .content-post-about .bloc-left, .content-post-about .about-bloc {
-        width: 100%;
-       
-    }
-
-
-}
-
-@media screen and (max-width: 425px) {
-    .photo-covert img {
-        width: 100%;
-        padding: 0px;
-        height: 150px;
-    }
-}
-.content-post-about .bloc-left .conten-posts {
-  /* display: none; */
-}
-
-
-/* display event */
-.conten-events{
-    width: 100%;
-    height: fit-content;
-    padding-bottom: 10em;
-}
-.event-details{
-     width: 100%;
-     height: fit-content;
-     display: flex;
-     flex-direction: column;
-     gap: 10px;
-     margin-bottom: 20px;
-     padding-top: 10px;
-     border-radius: 10px;
-     background: var(--primary-bg);
-}
-.event-details h2{
-    padding: 10px ;
-}
-.event-details p,
-.event-details pre{
-    width: 100%;
-    padding-left: 10px;
-    font-size: 17px;
-    text-wrap: wrap;
-    word-wrap: break-word;
-}
-.event-details p i{
-    margin-right: 10px;
-    font-size: 22px;
-    color: gray;
-}
-.event-details p span{
-    margin-right: 10px;
-    color: gray;
-}
-.event-details button{
-  width: fit-content;
-  padding: 8px;
-  margin: 10px;
-  font-size: 17px;
-  background: var(--second-blue);
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-}
-.event-details button i{
-  margin-right: 5px;
-}
-.event-details .btn-not-going{
-   background: var(--secondary-bg);
-}
-.conten-events{
-    display: none;
-}
-
-
-/* chat group */
-.container-chat-group{
-     width: 400px;
-     height: fit-content;
-     position: fixed;
-     bottom: 10px;
-     right: 30px;
-     border-radius: 10px;
-     border: 1px dashed gray;
-     background: var(--secondary-bg);
-}
-.chat-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 10px;
-}
-.chat-header i{
-    font-size: 22px;
-    color: gray;
-}
-.container-chat-group hr{
- border-color: gray;
-}
-.container-chat-group .chat-body{
-    width: 100%;
-    height: 400px;
-    padding: 10px;
-    padding-bottom: 0px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-.container-chat-group .chat-body .content-mess{
- width: 100%;
- height: fit-content; 
- display: flex;
- align-items:  normal;
- gap: 10px;
- margin-bottom: 20px;
-}
-
-.container-chat-group .chat-body .content-mess img{
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
-}
-.container-chat-group .chat-body .content-mess div{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    width: 85%;
-}
-.container-chat-group .chat-body .content-mess div pre{
-    padding: 10px 5px;
-    border-radius: 10px;
-    flex-wrap: wrap;
-    text-wrap: wrap;
-    word-wrap: break-word;
-    background: var(--primary-bg);
-}
-.container-chat-group .chat-body .content-mess div p{
-    font-size: small;
-}
-.container-chat-group .chat-body .content-mess div p span{
-    margin-right: 10px;
-    color: gray;
-}
-.container-chat-group .chat-footer {
-    width: 390px;
-    height:60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #2d2d2d;
-    margin: 5px;
-    padding-right: 5px;
-    border-radius: 10px;
-    border: 1px solid rgb(63, 63, 63);
-  }
-  .chat-footer:focus-within {
-    border: 1px solid rgb(110, 110, 110);
-  }
-  .emoji{
-    font-size: 22px;
-    margin-right: 5px;
-    cursor: pointer;
-  }
-
-  #messageInput-2 {
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    outline: none;
-    resize: none;
-    border: none;
-    padding-top: 5px;
-    font-size: 18px;
-    padding-left: 10px;
-    color: white;
-    
-  }
-  #messageInput-2:focus ~ #sendButton-2 svg path,
-  #messageInput-2:valid ~ #sendButton-2 svg path {
-    fill: #3c3c3c;
-    stroke: white;
-  }
-  
-  #sendButton-2 {
-    width: fit-content;
-    height: 100%;
-    background-color: transparent;
-    outline: none;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: all 0.3s;
-  }
-  #sendButton-2 svg {
-    height: 20px;
-    transition: all 0.3s;
-  }
-  #sendButton-2 svg path {
-    transition: all 0.3s;
-  }
-  #sendButton-2:hover svg path {
-    fill: #3c3c3c;
-    stroke: white;
-  }
-  
-
-  @media screen and (max-width: 450px) {
-    .container-chat-group{
-        width: 95%;
-        right: 10px;
-   }
-   .container-chat-group .chat-footer {
-    width: 96%;
-
-   }
-}
-
-.container-chat-group{
-    display: none;
-}
-
-
-/* form create post */
-.content-form-post {
-    width: 500px;
-    height: fit-content;
-    max-height: 70vh;
-    overflow: hidden;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    background: var(--primary-bg);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  }
-  
-  .post-header h1 {
-    font-weight: initial;
-    text-transform: capitalize;
-    text-align: center;
-  }
-  .content-form-post hr {
-    margin: 10px 0px;
-    border-color: gray;
-  }
-  
-  .post-content textarea{
-    width: 98%;
-    height: 150px;
-    margin-top: 20px;
-    padding: 20px;
-    font-size: 22px;
-    font-weight: initial;
-    background: transparent;
-    border: none;
-    color: gray;
-    border-left: 5px solid gray;
-    resize: none;
-    outline: none;
-  }
-  .content-assets {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  .content-assets i,
-  .content-assets span {
-    font-size: 25px;
-    cursor: pointer;
-  }
-  .content-assets i {
-    margin-right: 10px;
-    color: var(--teal60);
-  }
-  
-  .btn-post{
-     width: 100%;
-     margin: 20px 0px;
-     padding: 10px 0px;
-     font-size: 18px;
-     border: none;
-     border-radius: 5px;
-     color: gray;
-     background: var(--secondary-bg);
-     cursor: pointer;
-  }
-  
-  
-  @media screen and (max-width:767px) {
-    .content-form-post {
-      width: 90%;
-  
-    }
-  }
-  .content-form-post{
-    display: none;
-  }
-
-  /* form create event */
-.content-form-event {
-    width: 500px;
-    height: fit-content;
-    max-height: 70vh;
-    overflow: hidden;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    background: var(--primary-bg);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  }
-  
-  .event-header h1 {
-    font-weight: initial;
-    text-transform: capitalize;
-    text-align: center;
-  }
-  .content-form-event hr {
-    margin: 10px 0px;
-    border-color: gray;
-  }
-  .event-content .title-event ,
-  .event-content textarea{
-    width: 98%;
-    height: 80px;
-    margin-top: 20px;
-    padding: 20px;
-    font-size: 18px;
-    font-weight: initial;
-    background: transparent;
-    border: none;
-    color: gray;
-    border-left: 5px solid gray;
-    resize: none;
-    outline: none;
-  }
-  .event-content .title-event {
-    width: 98%;
-    height: 40px;
-    margin-top: 20px;
-    padding: 20px;
-    border: none;
-    border-left: 5px solid gray;
-  }
-  .event-content .content-date-time{
-   display: flex;
-   justify-content: space-between;
-  }
-  .event-content .content-date-time div{
-        width: 40%;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;      
-    }
-    .event-content .content-date-time div input{
-        width: 100%;
-        height: 100%;
-        padding: 8px 4px;
-        font-size: 18px;
-        background: transparent;
-        border: 1px solid gray;
-        outline: none;
-        cursor: pointer;
-  }
-
-  
-  .content-form-event  .btn-event{
-     width: 100%;
-     margin: 0px 0px;
-     margin-top: 25px;
-     padding: 10px 0px;
-     font-size: 18px;
-     border: none;
-     border-radius: 5px;
-     color: gray;
-     background: var(--secondary-bg);
-     cursor: pointer;
-  }
-  
-  
-  @media screen and (max-width:767px) {
-    .content-form-event {
-      width: 90%;
-  
-    }
-  }
-  .content-form-event {
-display: none;
-  }
-
-  /* list people saying going */
-
-  .content-list-people-going {
-    width: 500px;
-    height: fit-content;
-    max-height: 70vh;
-    overflow: hidden;
-    overflow-y: auto;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 20px;
-    border-radius: 10px;
-    background: var(--primary-bg);
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  }
-  
-  .list-header h1 {
-    display: flex;
-    justify-content: space-between;
-    font-weight: initial;
-    text-transform: capitalize;
-    text-align: center;
-  }
-  .content-list-people-going hr {
-    margin: 10px 0px;
-    border-color: gray;
-  }
-
-
-  
-  .list-friend {
-    width: 100%;
-    height: fit-content;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-   
-  }
-  .list-friend .user-bloc {
-    display: flex;
-  }
-  .list-friend .user-bloc div {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  .list-friend .user-bloc div img {
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
-  }
-  .list-friend .user-bloc div span{
-    color: gray;
-  }
-
-  
-
-  
-  @media screen and (max-width:767px) {
-    .content-list-people-going {
-      width: 90%;
-  
-    }
-  }
-  .content-list-people-going {
-    display: none;
-  }
