--- a/frontend/styles/modules/edit-profil.module.css
+++ b/frontend/styles/modules/edit-profil.module.css
@@ -193,7 +193,16 @@
     box-shadow: 0 0.5rem 1rem rgba(143, 142, 142, 0.15) !important;
     background: #000000;
   }
-  
+  .error{
+    font-size: 22px;
+    margin-bottom: 10px;
+    text-align: center;
+    color: rgb(230, 46, 46);
+  }
+  .error i{
+    color: rgb(230, 46, 46);
+    margin-right: 10px;
+  }
 
   @media screen and (max-width: 768px) {
 
