--- a/frontend/styles/modules/CreateGroup.module.css
+++ b/frontend/styles/modules/CreateGroup.module.css
@@ -2,7 +2,7 @@
 .contentFormGroup {
   width: 550px;
   height: fit-content;
-  max-height: 70vh;
+  /* max-height: 70vh; */
   overflow: hidden;
   overflow-y: scroll;
   position: absolute;
