--- a/frontend/styles/modules/CreatePost.module.css
+++ b/frontend/styles/modules/CreatePost.module.css
@@ -1,10 +1,8 @@
-/* body{
-  overflow: hidden;
-} */
+
 .contentFormPost {
   width: 550px;
   height: fit-content;
-  max-height: 70vh;
+  /* max-height: 70vh; */
   overflow: hidden;
   overflow-y: scroll;
   position: absolute;
