--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -72,11 +72,11 @@ body {
   background: var(--primary-bg);
 }
 
-
 a {
   color: inherit;
   text-decoration: none;
 }
+
 
 
 @import url("style.css");
@@ -88,6 +88,8 @@ a {
 @import url("profile.css");
 @import url("group.css");
 @import url("profile-group.css");
+@import url("error.css");
+
 
 
 
