--- a/frontend/styles/modules/profile.module.css
+++ b/frontend/styles/modules/profile.module.css
@@ -234,7 +234,7 @@
   width: 60px;
   height: 60px;
   margin-right: 10px;
-  border-radius: 10px;
+  border-radius: 100%;
   border: 1px solid white;
 }
 
