--- a/frontend/styles/modules/profile.module.css
+++ b/frontend/styles/modules/profile.module.css
@@ -17,20 +17,36 @@
   height: auto;
   display: block;
 }
+.userDetails{
+  background-color: red;
+  width: 100%;
+}
+
 
 .photoCovert div {
-  width: fit-content;
+
   display: flex;
   flex-direction: column;
-
   gap: 10px;
   position: relative;
   top: -15px;
   margin-left: 10px;
 }
+.userDetails div{
+  width: 100%;
+}
+.userDetails div div:first-of-type{
+  width: fit-content;
+  background-color: green;
+}
+.userDetails div .blocFlow{
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  background-color: blue;
+}
 
 .photoCovert div div {
-  width: fit-content;
   display: flex;
   flex-direction: row;
   align-items: center;
