--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -13,6 +13,7 @@
   --third-blue: #3154f198;
   --teal60: #00D4A1;
   --green55: #00ED4F;
+  --red50: #cf5a8b;
   --red60: #C90054;
   --fds-blue-05: #ECF3FF;
   --fds-blue-30: #AAC9FF;
