--- a/frontend/styles/modules/profile-group.module.css
+++ b/frontend/styles/modules/profile-group.module.css
@@ -145,7 +145,9 @@
     margin-left: 0px;
     margin-bottom: 20px;
 }
-
+.membre{
+  cursor: pointer;
+}
 
 @media screen and (max-width:1024px) {
 
@@ -174,14 +176,15 @@
     .photoCovert .blocActionGroupType .action,
     .photoCovert .blocActionGroupType .groupType {
         width: 100%;
+        
     }
     .photoCovert .blocActionGroupType .groupType {
-
         height: fit-content;
         position: relative;
         display: flex;
         gap: 10px;
     }
+ 
     
     .photoCovert .blocActionGroupType .action {
         height: fit-content;
@@ -531,8 +534,51 @@
     }
   }
 
+  /* list frend */
 
+   
+  .listMenmbres {
+    width: 100%;
+    height: fit-content;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .listMenmbres  .userBloc {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
+  .listMenmbres .userBloc div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .listMenmbres .userBloc div img {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+  }
+  .listMenmbres .userBloc div span{
+    color: gray;    
+  }
 
+  .listMenmbres .userBloc  button{
+     background: var(--second-blue);
+     border: none;
+     display: flex;
+     align-items: center;
+     gap: 5px;
+     padding: 10px 12px;
+     font-size: 18px;
+     border-radius: 5px;
+     cursor: pointer;
+  }
+  .listMenmbres .userBloc  button i{
+    font-size: 20px;
+  }
 
 
 
