--- a/frontend/styles/modules/profile.module.css
+++ b/frontend/styles/modules/profile.module.css
@@ -338,3 +338,10 @@
 .active {
   background: var(--second-blue);
 }
+
+.joinContainer {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  gap:  10px; 
+}
